add functions page

--- a/markup/assets/scss/entry/partials/_components.sass
+++ b/markup/assets/scss/entry/partials/_components.sass
@@ -10,6 +10,8 @@
 @import blocks/partners/partners
 @import blocks/import/import
 @import blocks/tabs/tabs
+@import blocks/about/about
+@import blocks/feature/feature
 
 
 // @import blocks/stats/stats
