--- a/markup/blocks/capabilities/capabilities.sass
+++ b/markup/blocks/capabilities/capabilities.sass
@@ -85,8 +85,10 @@
     +mq($small)
       padding-left: 0
     .list__item
-      max-width: 472px
+      max-width: 100%
       width: 100%
+      +mq($medium)
+        max-width: 50%
 
   &__button
     margin-left: 0
