--- a/markup/assets/scss/GUI.sass
+++ b/markup/assets/scss/GUI.sass
@@ -55,6 +55,15 @@
       width: 32px
       transform: none
 
+.list_theme_secondary
+  font-weight: 400
+  font-size: 14px
+  line-height: 1.428
+  +mq($small)
+    font-size: 18px
+    line-height: 1.333
+
+
 .link
   color: inherit
   text-decoration: none
@@ -93,12 +102,14 @@
 
 
 .wysiwyg
-  line-height: 1.33333333333333
+  line-height: 1.333
 
   p
     margin-bottom: 16px
     font-size: 14px
     line-height: 1.428
+    &:last-of-type
+      margin-bottom: 24px
     +mq($small)
       margin-bottom: 40px
       font-size: 18px
