--- a/markup/assets/scss/common.sass
+++ b/markup/assets/scss/common.sass
@@ -20,7 +20,8 @@ body
     flex-shrink: 0
     flex-basis: auto
     overflow: hidden
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
+    +mq($small)
+      box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
 
 .container
   margin: auto
@@ -29,11 +30,6 @@ body
   width: 100%
   max-width: 1420px
 
-
 img
   max-width: 100%
   height: auto
-
-
-
-
