--- a/markup/blocks/footer/footer.pug
+++ b/markup/blocks/footer/footer.pug
@@ -15,8 +15,8 @@ mixin footer(data)
       .footer__col.footer__col_address
         .footer__address 199155, Санкт-Петербург, наб. реки Смоленки, 33
 
-      a.footer__col.footer__col_phone
-        .footer__phone(href="tel:+78005005478") +7 800 500 54 78
+      .footer__col.footer__col_phone
+        a.footer__phone(href="tel:+78005005478") +7 800 500 54 78
 
-      a.footer__col.footer__col_email
-        .footer__email(href="mailto:info@igit.spb.ru") info@igit.spb.ru
+      .footer__col.footer__col_email
+        a.footer__email(href="mailto:info@igit.spb.ru") info@igit.spb.ru
