--- a/markup/blocks/header/header.sass
+++ b/markup/blocks/header/header.sass
@@ -7,9 +7,17 @@
   height: 40px
   background: $blue
   color: $white
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
   +mq($small)
     height: 72px
+  &:after
+    position: absolute
+    z-index: -1
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    content: ""
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
   // &__container
 
   &__logo
@@ -27,3 +35,9 @@
     margin-left: auto
     margin-right: -39px
 
+
+.header__nav-active
+  .nav__list
+    left: 0
+    transform: translateX(0%)
+    +tr(transform .3s ease)
