--- a/markup/blocks/hero/hero.sass
+++ b/markup/blocks/hero/hero.sass
@@ -3,7 +3,8 @@
   background-position: 50% 0
   background-repeat: no-repeat
   color: $white
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
+  +mq($small)
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
   &__container
     padding-top: 32px
     padding-bottom: 32px
@@ -19,6 +20,7 @@
   &__image
     margin-bottom: 20px
     margin-right: 140px
+    min-width: 300px
     max-width: 568px
     width: 100%
     // flex-shrink: 1
@@ -27,13 +29,15 @@
       margin-bottom: 0
       flex-shrink: 1
     +mq($medium)
-      flex-shrink: 1
+      flex-shrink: 0
 
 
 
   &__w
     flex-shrink: 1
     text-align: right
+    +mq($small)
+      text-align: left
 
 
   &__title
