add capabilities page

--- a/markup/assets/scss/entry/partials/_components.sass
+++ b/markup/assets/scss/entry/partials/_components.sass
@@ -13,6 +13,10 @@
 @import blocks/about/about
 @import blocks/feature/feature
 
+@import blocks/benefits/benefits
+@import blocks/advantages/advantages
+@import blocks/mobile/mobile
+@import blocks/implemented/implemented
 
 // @import blocks/stats/stats
 // @import blocks/about-us/about-us
