--- a/markup/blocks/header/header.sass
+++ b/markup/blocks/header/header.sass
@@ -39,5 +39,6 @@
 .header__nav-active
   .nav__list
     left: 0
+    opacity: 1
     transform: translateX(0%)
-    +tr(transform .3s ease)
+    +tr(opacity .3s ease)
