--- a/markup/assets/scss/GUI.sass
+++ b/markup/assets/scss/GUI.sass
@@ -63,6 +63,9 @@
     font-size: 18px
     line-height: 1.333
 
+  .list__icon
+    top: 0
+    transform: none
 
 .link
   color: inherit
@@ -102,7 +105,13 @@
 
 
 .wysiwyg
+
+  h2
+  font-size: 24px
   line-height: 1.333
+  +mq($small)
+    font-size: 48px
+    line-height: 1.166
 
   p
     margin-bottom: 16px
@@ -121,3 +130,4 @@
 
     +mq($small)
       font-size: 24px
+      line-height: 1.333
