--- a/markup/assets/scss/common.sass
+++ b/markup/assets/scss/common.sass
@@ -23,6 +23,12 @@ body
     +mq($small)
       box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25)
 
+.page_inner
+  .page__inner
+    box-shadow: none
+    +mq($small)
+      box-shadow: none
+
 .container
   margin: auto
   padding-right: 15px
