--- a/markup/blocks/capabilities/capabilities.pug
+++ b/markup/blocks/capabilities/capabilities.pug
@@ -58,3 +58,45 @@ mixin capabilities(data)
         a.capabilities__button.button(href="#button") Подробнее
 
 
+
+mixin capabilities-second(data)
+  section.capabilities
+    .capabilities__container.container
+      h2.capabilities__title.title.title_big ГИС «Циклон» позволяет
+      ul.capabilities__list.flex.flex_top
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-1', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Поддерживать целостность пространственных данных
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-2', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Применять специальные правила к данным
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-3', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Хранить разнородные пространственные данные в едином хранилище
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-4', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Работать с данными в режиме многопользовательского доступа и редактирования
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-5', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Интегрировать пространственные данные с другими ИТ-системами
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-6', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Определять пространственные модели отношений (топологию, геометрические сети)
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-7', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Легко масштабировать решение по хранению данных
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-8', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Максимально эффективно использовать имеющиеся пространственные данные
+
+        li.capabilities__item.flex.flex_vertical
+          != pugHelpers.Icon.call(locals, {iconName: 'capable-9', className: 'capabilities__icon', iconWidth: '94', iconHeight: '94'})
+          .capabilities__text Контролировать текущее состояние всех объектов
+
