--- a/markup/blocks/header/header.pug
+++ b/markup/blocks/header/header.pug
@@ -14,12 +14,12 @@ mixin header(data)
           li.nav__item.nav__item_active
             a.nav__link(href="/index.html") Обзор
           li.nav__item
-            a.nav__link(href="/functions.html") Возможности
+            a.nav__link(href="/capabilities.html") Возможности
           li.nav__item
-            a.nav__link(href="#") Функции
+            a.nav__link(href="/functions.html") Функции
           li.nav__item
-            a.nav__link(href="#") Где внедрена
+            a.nav__link(href="/implemented.html") Где внедрена
           li.nav__item
-            a.nav__link(href="#") Поддержка
+            a.nav__link(href="/support.html") Поддержка
           li.nav__item
             a.nav__link(href="#") Контакты
