--- a/markup/blocks/hero/hero.sass
+++ b/markup/blocks/hero/hero.sass
@@ -19,17 +19,25 @@
 
   &__image
     margin-bottom: 20px
-    margin-right: 140px
-    min-width: 300px
-    max-width: 568px
+    margin-right: auto
+    margin-left: auto
+    min-width: 200px
+    max-width: 234px
     width: 100%
     // flex-shrink: 1
     flex-shrink: 0
     +mq($small)
       margin-bottom: 0
+      margin-right: 70px
+      min-width: 300px
+
+      max-width: 568px
       flex-shrink: 1
     +mq($medium)
       flex-shrink: 0
+    +mq($large)
+      margin-right: 140px
+
 
 
 
