--- a/markup/blocks/partners/partners.sass
+++ b/markup/blocks/partners/partners.sass
@@ -20,6 +20,8 @@
     flex-wrap: wrap
 
     +mq($small)
+      border-bottom: none
+
       margin-bottom: 50px
       margin-right: -12px
       margin-left: -12px
