--- a/markup/pages/implemented.pug
+++ b/markup/pages/implemented.pug
@@ -5,13 +5,18 @@ html(class="no-js", lang="ru")
   include ../blocks/header/header.pug
 
   include ../blocks/hero/hero.pug
-  include ../blocks/about/about.pug
+  //- include ../blocks/about/about.pug
 
-  include ../blocks/capabilities/capabilities.pug
-  include ../blocks/functions/functions.pug
-  include ../blocks/partners/partners.pug
-  include ../blocks/import/import.pug
-  include ../blocks/feature/feature.pug
+  //- include ../blocks/capabilities/capabilities.pug
+  //- include ../blocks/benefits/benefits.pug
+  //- include ../blocks/advantages/advantages.pug
+  //- include ../blocks/mobile/mobile.pug
+  include ../blocks/implemented/implemented.pug
+
+  //- include ../blocks/functions/functions.pug
+  //- include ../blocks/partners/partners.pug
+  //- include ../blocks/import/import.pug
+  //- include ../blocks/feature/feature.pug
 
   include ../blocks/footer/footer.pug
 
@@ -22,14 +27,18 @@ html(class="no-js", lang="ru")
     +header()
     //- end header
     main.page__inner
-      +hero-functions()
-      +about()
-      //- +capabilities()
-      +functions-features()
-      +feature-first()
-      +feature-second()
-      +feature-third()
-      +feature-fourth()
+      +hero-implemented()
+      +implemented()
+      //- +about()
+      //- +capabilities-second()
+      //- +benefits()
+      //- +advantages()
+      //- +mobile()
+      //- +functions-features()
+      //- +feature-first()
+      //- +feature-second()
+      //- +feature-third()
+      //- +feature-fourth()
 
 
       //- +feature-first()
