--- a/markup/assets/scss/entry/partials/_components.sass
+++ b/markup/assets/scss/entry/partials/_components.sass
@@ -17,6 +17,9 @@
 @import blocks/advantages/advantages
 @import blocks/mobile/mobile
 @import blocks/implemented/implemented
+@import blocks/support/support
+@import blocks/form/form
+
 
 // @import blocks/stats/stats
 // @import blocks/about-us/about-us
