add contacts page

--- a/markup/assets/scss/entry/partials/_components.sass
+++ b/markup/assets/scss/entry/partials/_components.sass
@@ -19,6 +19,7 @@
 @import blocks/implemented/implemented
 @import blocks/support/support
 @import blocks/form/form
+@import blocks/contacts/contacts
 
 
 // @import blocks/stats/stats
