--- a/markup/blocks/header/header.pug
+++ b/markup/blocks/header/header.pug
@@ -22,4 +22,4 @@ mixin header(data)
           li.nav__item
             a.nav__link(href="/support.html") Поддержка
           li.nav__item
-            a.nav__link(href="#") Контакты
+            a.nav__link(href="/contacts.html") Контакты
