--- a/markup/blocks/hero/hero.pug
+++ b/markup/blocks/hero/hero.pug
@@ -44,3 +44,13 @@ mixin hero-support(data)
       .hero__w
         h1.hero__title.title Поддержка
         .hero__text Мы поможем обеспечить экономически обоснованный, гибкий и поэтапный переход с зарубежных технологий на отечественную платформу, полностью соответствующую требованиям регулятора.
+
+
+mixin hero-contacts(data)
+  section.hero.lazy(data-bg="url('assets/images/general/waves.png')")
+    .hero__container.container.flex.flex_bottom
+      .hero__image
+        img(src="assets/images/content/hero-contacts-img.png", alt="")
+      .hero__w
+        h1.hero__title.title Контакты
+        .hero__text Платформа «Циклон» была разработана сотрудниками Института географических информационных технологий, входящего в состав корпорации «Госинфотех».
